sync list